--- a/environment/env03.html
+++ b/environment/env03.html
@@ -14,6 +14,10 @@
 </head>
 <div class=env-css>
 <body>
+
+    <button id="bg1-button">Night</button>
+    <button id="bg2-button">Day</button>
+    <div id="output3"></div>
  <h1>This is lucario, hes pretty tough </h1> 
 
 <h2>He looks pretty angry, I would't get too close!</h2>
