--- a/environment/env04.html
+++ b/environment/env04.html
@@ -19,15 +19,15 @@
     <!-- Main content goes here, inside BODY -->
     <h1>Env04</h1>
 
-    <div class="nice-block"><span>more</span> 
+    <div class="nice-block" data-popup="Information about Lucario"><span>more</span> 
   <p>Lucario:    It's said that no foe can remain invisible to Lucario, since it can detect auras—even those of foes it could not otherwise see</p>
 </div>
 
-<div class="nice-block"><span>more</span> 
+<div class="nice-block" data-popup="Information about Machamp"><span>more</span> 
   <p>Machamp:    It punches with its four arms at blinding speed. It can launch 1,000 punches in two seconds</p>
 </div>
 
-<div class="nice-block"><span>more</span> 
+<div class="nice-block" data-popup="Information about Incineroar"><span>more</span> 
   <p>Incineroar: When its fighting spirit is set alight, the flames around its waist become especially intense</p>
 </div>
 
