--- a/environment/env04.html
+++ b/environment/env04.html
@@ -2,35 +2,31 @@
 <html lang="en">
 
 <head>
-    <!-- All techy stuff goes here, inside HEAD -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Overall title of your page -->
     <title>Lab 5</title>
-    <!-- Link to external CSS file -->
     <link rel="stylesheet" href="env04.css">
-    <!-- jQuery library -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <!-- Link to external JavaScript file -->
     <script src="env04.js" defer></script>
 </head>
 
 <body>
-    <!-- Main content goes here, inside BODY -->
     <h1>Env04</h1>
 
-    <div class="nice-block" data-popup="Information about Lucario"><span>more</span> 
-  <p>Lucario:    It's said that no foe can remain invisible to Lucario, since it can detect auras—even those of foes it could not otherwise see</p>
-</div>
+    <div class="nice-block" data-popup="Information about Lucario">
+        <span>more</span>
+        <p>Lucario: It's said that no foe can remain invisible to Lucario, since it can detect auras—even those of foes it could not otherwise see</p>
+    </div>
 
-<div class="nice-block" data-popup="Information about Machamp"><span>more</span> 
-  <p>Machamp:    It punches with its four arms at blinding speed. It can launch 1,000 punches in two seconds</p>
-</div>
+    <div class="nice-block" data-popup="Information about Machamp">
+        <span>more</span>
+        <p>Machamp: It punches with its four arms at blinding speed. It can launch 1,000 punches in two seconds</p>
+    </div>
 
-<div class="nice-block" data-popup="Information about Incineroar"><span>more</span> 
-  <p>Incineroar: When its fighting spirit is set alight, the flames around its waist become especially intense</p>
-</div>
-
+    <div class="nice-block" data-popup="Information about Incineroar">
+        <span>more</span>
+        <p>Incineroar: When its fighting spirit is set alight, the flames around its waist become especially intense</p>
+    </div>
 </body>
 
 </html>
